pyk/src/tests/unit/kore/test-data/definitions/pass/test-hooks-7.kore
[]

module S

  sort S{} []

  hooked-symbol f{}() : S{} [hook{}("S.f")]

endmodule []

module T

  import S []

  // Verification failure: multiple hooks in different modules
  hooked-symbol g{}() : S{} [hook{}("S.f")]

endmodule []