pyk/src/tests/unit/kore/test-data/definitions/should-fail/test-int-2.kore
[]
module K
    sort K{} []
endmodule
[]

module BOOL
    hooked-sort Bool{} [hook{}("BOOL.Bool")]
endmodule
[]

module INT
    import K []
    import BOOL []
    hooked-sort Int{s} [hook{}("INT.Int")]
    hooked-symbol geInt{s}(Int{s}, Int{s}) : Bool{} [hook{}("INT.ge")]
endmodule
[]
